trunk/Archive2/1d/3627575b7da056/output
main.cpp: In function 'int main()':
main.cpp:10:6: error: no match for 'operator+=' (operand types are 'const string {aka const std::basic_string<char>}' and 'const char [2]')
   r2 += "!"; // error: cannot modify through reference to const
      ^
main.cpp:10:6: note: candidates are:
In file included from /usr/local/include/c++/4.9.0/string:52:0,
                 from /usr/local/include/c++/4.9.0/bits/locale_classes.h:40,
                 from /usr/local/include/c++/4.9.0/bits/ios_base.h:41,
                 from /usr/local/include/c++/4.9.0/ios:42,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/basic_string.h:949:7: note: std::basic_string<_CharT, _Traits, _Alloc>& std::basic_string<_CharT, _Traits, _Alloc>::operator+=(const std::basic_string<_CharT, _Traits, _Alloc>&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>] <near match>
       operator+=(const basic_string& __str)
       ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:949:7: note:   no known conversion for implicit 'this' parameter from 'const string* {aka const std::basic_string<char>*}' to 'std::basic_string<char>*'
/usr/local/include/c++/4.9.0/bits/basic_string.h:958:7: note: std::basic_string<_CharT, _Traits, _Alloc>& std::basic_string<_CharT, _Traits, _Alloc>::operator+=(const _CharT*) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>] <near match>
       operator+=(const _CharT* __s)
       ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:958:7: note:   no known conversion for implicit 'this' parameter from 'const string* {aka const std::basic_string<char>*}' to 'std::basic_string<char>*'
/usr/local/include/c++/4.9.0/bits/basic_string.h:967:7: note: std::basic_string<_CharT, _Traits, _Alloc>& std::basic_string<_CharT, _Traits, _Alloc>::operator+=(_CharT) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>] <near match>
       operator+=(_CharT __c)
       ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:967:7: note:   no known conversion for argument 1 from 'const char [2]' to 'char'
/usr/local/include/c++/4.9.0/bits/basic_string.h:980:7: note: std::basic_string<_CharT, _Traits, _Alloc>& std::basic_string<_CharT, _Traits, _Alloc>::operator+=(std::initializer_list<_Tp>) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
       operator+=(initializer_list<_CharT> __l)
       ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:980:7: note:   no known conversion for argument 1 from 'const char [2]' to 'std::initializer_list<char>'
